kube/apps/remote-pi-relay/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: remote-pi-relay
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remote-pi-relay
  namespace: remote-pi-relay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remote-pi-relay
  template:
    metadata:
      labels:
        app: remote-pi-relay
    spec:
      containers:
        - name: remote-pi-relay
          image: jacobmoura7/remote-pi-relay:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: remote-pi-data
---
apiVersion: v1
kind: Service
metadata:
  name: remote-pi-relay
  namespace: remote-pi-relay
spec:
  selector:
    app: remote-pi-relay
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
